# pytorch_snippets

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yaml
src/educational/: models.py
src/educational/hooks/: demo.py  util.py
src/util/: hook.py
