[tool.poetry]
name = "pytorch-snippets"
version = "0.1.0"
description = ""
authors = ["Jay Lee <ljay189@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_snippets"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
torchvision = "^0.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
